# Effective-Mobile

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitmessage.txt  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-locale.yml  docker-compose.yml  makefile  pyproject.toml
docs/: Deploying.md  Migrations.md  Nginx.md  Swarm.md
infra/: dev.env
infra/conf/nginx/: default.conf  nginx.conf
infra/conf/nginx/dev/: nginx.conf
infra/conf/nginx/dev/conf.d/: default.conf
infra/conf/nginx/prod/: nginx.conf
infra/conf/nginx/prod/conf.d/: default.conf
infra/envs/: dev.env  env.dev  env.prod  secrets
infra/scripts/: entrypoint.sh  start.sh
infra/scripts/celery/: start-celery-beat.sh  start-celery-worker.sh
infra/swarm/dev/: app-stack.yml  minio-stack.yml  nginx-stack.yml  statefull-stack.yml
infra/swarm/prod/: app-stack.yml  minio-stack.yml  nginx-stack.yml  statefull-stack.yml
src/apps/accounts/: admin.py  authentication.py  models.py  schemas.py  serializers.py  tests.py  urls.py  views.py
src/apps/accounts/management/commands/: create_test_data.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/accounts/models/: __init__.py  auth.py  object_permission.py  rbac.py  user.py
src/apps/accounts/permissions/: __init__.py  admin.py  base.py
src/apps/accounts/serializers/: __init__.py  admin.py  auth.py  rbac.py  user.py
src/apps/accounts/services/: auth_service.py  user_service.py
src/apps/accounts/tests/: __init__.py  test_login.py
src/apps/accounts/utils/: jwt_utils.py
src/apps/accounts/views/: __init__.py  admin.py  auth.py  rbac.py  user.py
src/apps/blog/: admin.py  groups.py  manager.py  models.py  permissions.py  schemas.py  serializers.py  services.py  tests.py  urls.py  views.py
src/apps/blog/migrations/: 0001_initial.py  0002_historicalpost.py  0002_postimage.py  0003_postimage_created_at_postimage_updated_at.py
src/apps/blog/tests/: __init__.py  test_posts.py
src/apps/common/: admin.py  apps.py  constants.py  exceptions.py  forms.py  groups.py  models.py  permissions.py  schema.py  serializers.py  signals.py  tests.py  urls.py  views.py  widgets.py
src/apps/common/factories/: __init__.py  blog_factories.py  user_factories.py
src/apps/common/mixins/: __init__.py  admin_mixins.py  model_mixins.py  test_mixins.py  view_mixins.py
src/apps/common/tests/: README.md  __init__.py  test_api_error_integration.py  test_error_handling.py  test_error_serializers.py  test_runner.py  test_validation_errors.py
src/config/additional/: error_handling.py  logging_setuper.py  storage.py
src/config/db_routers/: __init__.py  db_routers.py
src/config/di/: container.py  dishka.py
src/config/middlewares/: __init__.py  dishka.py  dishka_middleware.py  logging.py
src/config/settings/: __init__.py  base.py  dev.py  local.py  prod.py
src/config/urls/: __init__.py  api.py  auth.py  swagger.py
src/static/js/: admin-row-clickable.js
src/utils/: config_loader.py  permissions.py  s3_uploader.py  storage.py
