[project]
name = "django-template-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.35",
    "celery>=5.5.3",
    "decouplet>=0.1.1",
    "dishka>=1.6.0",
    "django>=5.2.3",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "django-prometheus>=2.3.1",
    "django-redis>=5.4.0",
    "django-simple-history>=3.10.1",
    "django-storages>=1.14.6",
    "django-unfold>=0.59.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "factory-boy>=3.3.3",
    "faker>=37.4.0",
    "gunicorn>=23.0.0",
    "json-logify==0.1.2",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "redis>=6.2.0",
    "ruff>=0.14.2",
    "sentry-sdk[django]>=2.30.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints",
    ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype",
    ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "site-packages", "venv", "migrations",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.per-file-ignores]
"src/apps/accounts/migrations/*.py" = ["E501"]
"src/apps/blog/migrations/*.py" = ["E501"]
"src/apps/common/migrations/*.py" = ["E501"]
"src/config/settings/base.py" = ["E501"]
"src/config/settings/dev.py" = ["E501", "F403", "F405"]
"src/config/settings/local.py" = ["E501", "F403", "F405"]
"src/config/settings/prod.py" = ["E501", "F403", "F405"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
